--- a/app/src/main/res/layout/fragment_ajustes.xml
+++ b/app/src/main/res/layout/fragment_ajustes.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,34 +9,22 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
         android:background="#FFFDFD"
         android:text="@string/Ajustes"
         android:textSize="30sp"
         android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.464" />
-
-    <Button
-        android:id="@+id/buttonvolver1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="40dp"
-        android:backgroundTint="#2CD1CC"
-        android:text="@string/BotonVolver"
-        app:iconTint="#5A1D1D"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/botoneliminarcuenta"
         android:layout_width="139dp"
-        android:layout_height="56dp"
+        android:layout_height="52dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="24dp"
+        android:background="#DB442B"
         android:backgroundTint="#2CD1CC"
         android:text="@string/BotonEliminar_cuenta"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,23 +32,25 @@
 
     <Button
         android:id="@+id/BotonCambiarContraseña"
-        android:layout_width="109dp"
-        android:layout_height="59dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="56dp"
+        android:layout_width="139dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:background="#DB442B"
         android:backgroundTint="#2CD1CC"
         android:text="@string/Text_Editarcorreo"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button4"
         app:layout_constraintTop_toBottomOf="@+id/settingsnombreusuario" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="139dp"
         android:layout_height="52dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:background="#DB442B"
         android:backgroundTint="#2CD1CC"
-        android:text="@string/BotonCambiar_Contra"
+        android:text="CAMBIAR  CONTRASEÑA"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/botoneliminarcuenta" />
 
@@ -67,32 +58,32 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Correo electrÃ³nico:"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.113"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:text="Correo electronico:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonvolver1" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="256dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:text="Nombre de usuario"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Settingscorreo_Electronico" />
 
     <EditText
         android:id="@+id/Settingscorreo_Electronico"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="160dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
+        android:enabled="false"
         android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <EditText
@@ -100,8 +91,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
+        android:enabled="false"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
