--- a/app/src/main/res/layout/fragment_ajustes.xml
+++ b/app/src/main/res/layout/fragment_ajustes.xml
@@ -5,19 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
-        android:background="#FFFDFD"
-        android:text="@string/Ajustes"
-        android:textSize="30sp"
-        android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/botoneliminarcuenta"
         android:layout_width="139dp"
@@ -44,6 +31,7 @@
 
     <Button
         android:id="@+id/button4"
+        style="@style/Widget.AppCompat.Button"
         android:layout_width="139dp"
         android:layout_height="52dp"
         android:layout_marginStart="32dp"
@@ -62,7 +50,7 @@
         android:layout_marginTop="16dp"
         android:text="Correo electronico:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
@@ -97,4 +85,15 @@
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="139dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="17dp"
+        android:background="#DB442B"
+        android:text="@string/CambiarImg"
+        app:layout_constraintStart_toEndOf="@+id/button4"
+        app:layout_constraintTop_toBottomOf="@+id/BotonCambiarContraseña" />
 </androidx.constraintlayout.widget.ConstraintLayout>
