--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -32,6 +32,10 @@
                 android:id="@+id/nav_error"
                 android:icon="@drawable/ic_menu_share"
                 android:title="@string/menu_error" />
+            <item
+                android:id="@+id/nav_exit"
+                android:icon="@drawable/ic_menu_camera"
+                android:title="@string/menu_exit" />
         </menu>
     </item>
 </menu>
