--- a/app/src/main/res/layout/activity_sign_up__estudiante.xml
+++ b/app/src/main/res/layout/activity_sign_up__estudiante.xml
@@ -113,7 +113,7 @@
         app:layout_constraintTop_toBottomOf="@+id/spinnerSemestre" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/Volver_login_estudiante"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
