--- a/app/src/main/res/layout/activity_cambio_img.xml
+++ b/app/src/main/res/layout/activity_cambio_img.xml
@@ -1,37 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="wrap_content">
 
     <Button
         android:id="@+id/button7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginEnd="108dp"
-        android:layout_marginBottom="23dp"
+        android:layout_marginBottom="15dp"
         android:text="@string/CambiarImg" />
 
     <ImageView
         android:id="@+id/goProDialogImage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/button8"
         android:layout_alignParentTop="true"
         android:layout_marginTop="0dp"
-        android:layout_marginBottom="15dp" />
+        android:layout_marginBottom="2dp" />
 
     <Button
         android:id="@+id/button8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/button7"
-        android:layout_alignParentStart="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="159dp"
-        android:layout_marginBottom="21dp"
+        android:layout_marginBottom="6dp"
         android:text="Siguiente" />
 
 </RelativeLayout>
