--- a/app/src/main/res/layout/activity_enroll_conflict.xml
+++ b/app/src/main/res/layout/activity_enroll_conflict.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="212dp"
-        android:text="ContinuarInscripcion"
+        android:text="No se pudo inscribir debido a un conflicto de horario"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="30sp"
