--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-
+    <color name="green">#4CAF50</color>
     <color name="backgroundLanding">#010506</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
